import org.gradle.internal.os.OperatingSystem

plugins {
    id 'java'
    id 'application'
    id "org.beryx.runtime" version "2.0.1"
    id "com.gradleup.shadow" version "9.4.1"
    id "org.graalvm.buildtools.native" version "1.0.0"
}

group 'org.doddle-owl'
version = '26.5.1'

java {
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

application {
    mainClass.set('io.github.doddle_owl.DODDLE_OWL')
}


project.ext {
    artifactId = 'doddle-owl'
    defaultEncoding = 'UTF-8'
}

repositories {
    mavenCentral()
}

wrapper {
    gradleVersion = '9.4.1'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Test) {
    systemProperty 'file.encoding', 'UTF-8'
}

tasks.withType(JavaExec) {
    systemProperty 'file.encoding', 'UTF-8'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes 'Main-Class': 'io.github.doddle_owl.DODDLE_OWL'
    }
}

tasks.withType(com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar).configureEach {
    mustRunAfter tasks.named('jar')
}

tasks.named('startShadowScripts') {
    dependsOn tasks.named('jar')
}

tasks.named('installShadowDist') {
    dependsOn tasks.named('jar')
}

runtime {
    options = ['--strip-debug', '--compress=zip-9', '--no-header-files', '--no-man-pages']
    modules = ['java.desktop', 'java.logging', 'java.xml', 'java.sql']
    imageDir = file("$buildDir/doddle-owl-${version}")
    imageZip = file("$buildDir/doddle-owl-${version}.zip")

    jpackage {
        outputDir = 'my-packaging'
        mainJar = "doddle-owl-${version}.jar"
        imageName = "DODDLE-OWL"
        skipInstaller = false
        installerName = "doddle-owl"
        jvmArgs = ["-XX:+UseCompactObjectHeaders"]
        if (OperatingSystem.current().isWindows()) {
            jpackageHome = 'C:\\Program Files\\BellSoft\\LibericaJDK-25'
            installerType = 'msi'
            installerName = 'DODDLE-OWL'
            imageOptions = ['--verbose', '--icon', './src/main/resources/images/doddle-owl.ico']
            installerOptions = ['--vendor', 'Takeshi Morita', '--win-shortcut']
        } else if (OperatingSystem.current().isMacOsX()) {
            jpackageHome = '/Library/Java/JavaVirtualMachines/liberica-jdk-25.jdk/Contents/Home'
            installerType = 'dmg'
            imageOptions = ['--verbose', '--icon', './src/main/resources/images/doddle-owl.icns', '--mac-package-identifier', 'io.github.doddle-owl']
            installerOptions = ['--vendor', 'Takeshi Morita']
        }
    }
}

tasks.runtime.doLast {
    copy {
        from('./README.md')
        into("$buildDir/doddle-owl-${version}")
    }
    copy {
        from('./README.ja.md')
        into("$buildDir/doddle-owl-${version}")
    }
    copy {
        from('./LICENSE')
        into("$buildDir/doddle-owl-${version}")
    }
    copy {
        from('./src/main/resources/jpwn_dict_1.1/')
        into("$buildDir/doddle-owl-${version}/ontologies/jpwn_dict_1.1/")
    }
}

shadowJar {
    mergeServiceFiles()
    manifest {
        attributes 'Main-Class': 'io.github.doddle_owl.DODDLE_OWL'
    }
    archiveFileName = "doddle-owl-${version}.jar"
    exclude 'jpwn_dict_1.1/'
}

dependencies {
    implementation 'com.formdev:flatlaf:3.7.1'
    implementation 'org.xerial:sqlite-jdbc:3.53.0.0'
    implementation 'commons-cli:commons-cli:1.11.0'
    implementation 'org.apache.pdfbox:pdfbox:2.0.36'
    implementation 'net.sf.extjwnl:extjwnl:2.0.5'
    implementation 'net.sf.extjwnl:extjwnl-data-wn31:1.2'
    implementation 'com.atilika.kuromoji:kuromoji-ipadic:0.9.0'
    implementation 'org.apache.poi:poi-ooxml:3.17'
    implementation 'edu.stanford.nlp:stanford-parser:3.9.2'
    implementation 'org.apache.jena:apache-jena-libs:5.6.0'
    implementation 'org.slf4j:slf4j-simple:2.0.17'
    implementation 'org.apache.logging.log4j:log4j-core:2.25.4'
    implementation 'com.optimaize.languagedetector:language-detector:0.6'
    compileOnly 'org.projectlombok:lombok:1.18.46'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:6.0.3'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:6.0.3'
}
